# MyYOLO

./: .gitignore  README.md  export_onnx.py
deploy_yolo/MyYOLO/: CMakeLists.txt  README.md
deploy_yolo/MyYOLO/examples/: main.cpp
deploy_yolo/MyYOLO/include/: YoloV8.h
deploy_yolo/MyYOLO/src/: YoloV8.cpp
train_yolo/: data.yaml  test.py  train_yolov8.py  yolo_wrapper.py
train_yolo/annotation/: 1_42.txt  1_44.txt  1_47.txt  1_677.txt  1_694.txt  3_1493.txt  3_1495.txt  3_1500.txt  3_1508.txt  3_1511.txt  3_1513.txt
train_yolo/datasets/: imgs.cache  labels.cache
train_yolo/datasets/labels/: 1_41.txt  1_43.txt  1_45.txt  1_46.txt  1_48.txt  1_49.txt  1_50.txt  1_676.txt  1_678.txt  1_679.txt  1_789.txt  1_790.txt  3_1492.txt  3_1507.txt  3_1512.txt
